# galaxy

./: .CMakeLists.txt.swp  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile
cmake/: FindGLog.cmake  FindLuabind.cmake  FindYamlCpp.cmake
include/: galaxy.h  gfx.h
include/galaxy/: component.h  componentmanager.h  face.h  fontmanager.h  galaxy.h  game.h  game.hpp  gameobject.h  gfx.h  gfx.hpp  gfx2.h  gfx2_macros.h  luastate.h  objectmanager.h  objectmanager.hpp  scene.h  scenemanager.h  scenemanager.hpp  shadermanager.h  shaderprogram.h  shaderprogram.hpp  shadertype.h  shadertype.hpp  texture.h  vbo.h
include/galaxy/components/: guiscript.h  luascript.h  transform.h
include/galaxy/gui/: label.h  widget.h
include/galaxy/mixins/: gameable.h  registerable.h  registerable.hpp
include/galaxy/objects/: camera.h
include/gxy/: game.h  gfx.h  macros.h
include/gxy/test/: functioncallmap.h
scripts/: class.gxy  gl_macros.py  gxy
src/: camera.cpp  casts.h  component.cpp  componentmanager.cpp  face.cpp  fontmanager.cpp  galaxy.cpp  galaxy.h  game.cpp  gameable.cpp  gameobject.cpp  global.h  guiscript.cpp  label.cpp  logger.cpp  luascript.cpp  luastate.cpp  objectmanager.cpp  scene.cpp  scene.h  scenemanager.cpp  shader.cpp  shader.h  shadermanager.cpp  shaderprogram.cpp  shaderprogram.h  shadertype.cpp  texture.cpp  traits.h  transform.cpp  vbo.cpp  widget.cpp
src/galaxy/: casts.h  casts.tpp  component.cpp  component.h  componentmanager.cpp  componentmanager.h  componentmanager.tpp  components.h  fontmanager.cpp  fontmanager.h  galaxy.cpp  galaxy.h  game.cpp  game.h  gameobject.cpp  gameobject.h  gamestate.cpp  gamestate.h  gfx.h  gfx.ipp  gl.h  gl.ipp  global.h  gui.cpp  gui.h  logger.cpp  logger.h  luastate.h  objectmanager.cpp  objectmanager.h  objectmanager.hpp  objectmanager.tpp  scene.cpp  scene.h  scenemanager.cpp  scenemanager.h  scenemanager.tpp  shader.cpp  shader.h  shadermanager.cpp  (+15 more)
src/galaxy/components/: guiscript.cpp  guiscript.h  luascript.cpp  luascript.h  transform.cpp  transform.h
src/galaxy/gui/: widget.h
src/galaxy/objects/: camera.cpp  camera.h  text2d.cpp  text2d.h
src/galaxy/widgets/: widget.h
src/gxy/: game.cpp
src/gxy/test/: functioncallmap.cpp
test/: CMakeLists.txt
test/src/: gametests.cpp  main.cpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/src/: main.cpp  teststatemanager.cpp
tests/unit/src/mocks/: gamestate.h  scenes.h
